# drift-instrument

./: .gitignore  README.md  pyproject.toml
docs/: tuning-log.md
firmware/Mozzi_MPU6050/: README.md
prototype/: constants.py  controller.py  drift.py  drift_prototype.py  imu_sim.py  main.py  plot.py  synth.py
tools/: inspect_recording.py
