[project]
name = "drift-instrument"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pynput>=1.8.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.35",
]
